# swagger/swagger.json
@@ -15,37 +15,10 @@
     },
     "basePath": "/v1",
     "paths": {
-        "/solicitud_evaluacion/consultar_solicitud/solicitud/{id_solicitud}": {
+        "/actualizaciones-datos/personas/{id_persona}/solicitudes": {
             "get": {
                 "tags": [
-                    "solicitud_evaluacion"
-                ],
-                "description": "Consultar los datos ingresados por el estudiante en su solicitud consultando por id de la solicitud",
-                "operationId": "SolicitudEvaluacionController.GetDatosSolicitudById",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "id_solicitud",
-                        "description": "Id de la solicitud",
-                        "required": true,
-                        "type": "integer",
-                        "format": "int64"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "{}"
-                    },
-                    "403": {
-                        "description": "body is empty"
-                    }
-                }
-            }
-        },
-        "/solicitud_evaluacion/consultar_solicitud/{id_persona}": {
-            "get": {
-                "tags": [
-                    "solicitud_evaluacion"
+                    "actualizaciones-datos"
                 ],
                 "description": "Consultar la solicitudes de un estudiante de actualización de datos",
                 "operationId": "SolicitudEvaluacionController.GetSolicitudActualizacionDatos",
@@ -69,10 +42,10 @@
                 }
             }
         },
-        "/solicitud_evaluacion/consultar_solicitud/{id_persona}/{id_estado_tipo_solicitud}": {
+        "/actualizaciones-datos/personas/{id_persona}/solicitudes/estados/{id_estado_tipo_solicitud}": {
             "get": {
                 "tags": [
-                    "solicitud_evaluacion"
+                    "actualizaciones-datos"
                 ],
                 "description": "Consultar los datos ingresados por el estudiante en su solicitud",
                 "operationId": "SolicitudEvaluacionController.GetDatosSolicitud",
@@ -104,65 +77,10 @@
                 }
             }
         },
-        "/solicitud_evaluacion/consultar_solicitudes/{id_estado_tipo_sol}": {
-            "get": {
-                "tags": [
-                    "solicitud_evaluacion"
-                ],
-                "description": "Consultar todas la solicitudes de actualización de datos",
-                "operationId": "SolicitudEvaluacionController.GetAllSolicitudActualizacionDatos",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "id_estado_tipo_sol",
-                        "description": "Id del estado tipo solicitud",
-                        "required": true,
-                        "type": "integer",
-                        "format": "int64"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "{}"
-                    },
-                    "403": {
-                        "description": "body is empty"
-                    }
-                }
-            }
-        },
-        "/solicitud_evaluacion/registrar_evolucion": {
+        "/actualizaciones-datos/solicitudes": {
             "post": {
                 "tags": [
-                    "solicitud_evaluacion"
-                ],
-                "description": "Agregar una evolucion del estado a la solicitud planteada",
-                "operationId": "SolicitudEvaluacionController.PostSolicitudEvolucionEstado",
-                "parameters": [
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "description": "body Agregar una evolucion del estado a la solicitud planteada content",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/{}"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "{}"
-                    },
-                    "403": {
-                        "description": "body is empty"
-                    }
-                }
-            }
-        },
-        "/solicitud_evaluacion/registrar_solicitud": {
-            "post": {
-                "tags": [
-                    "solicitud_evaluacion"
+                    "actualizaciones-datos"
                 ],
                 "description": "Agregar una solicitud de actualizacion de datos(ID o nombre)",
                 "operationId": "SolicitudEvaluacionController.PostSolicitudActualizacionDatos",
@@ -187,13 +105,105 @@
                 }
             }
         },
-        "/solicitud_evaluacion/{id}": {
+        "/actualizaciones-datos/solicitudes/estados/{id_estado_tipo_solicitud}": {
             "get": {
                 "tags": [
-                    "solicitud_evaluacion"
+                    "actualizaciones-datos"
+                ],
+                "description": "Consultar todas la solicitudes de actualización de datos filtradas por el id del tipo de solicitud",
+                "operationId": "SolicitudEvaluacionController.GetAllSolicitudActualizacionDatos",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id_estado_tipo_solicitud",
+                        "description": "Id del estado tipo solicitud",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{}"
+                    },
+                    "403": {
+                        "description": "body is empty"
+                    }
+                }
+            }
+        },
+        "/actualizaciones-datos/solicitudes/evoluciones": {
+            "post": {
+                "tags": [
+                    "actualizaciones-datos"
+                ],
+                "description": "Agregar una evolucion del estado a la solicitud planteada",
+                "operationId": "SolicitudEvaluacionController.PostSolicitudEvolucionEstado",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "body Agregar una evolucion del estado a la solicitud planteada content",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/{}"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{}"
+                    },
+                    "403": {
+                        "description": "body is empty"
+                    }
+                }
+            }
+        },
+        "/actualizaciones-datos/solicitudes/{id_solicitud}": {
+            "get": {
+                "tags": [
+                    "actualizaciones-datos"
+                ],
+                "description": "Consultar los datos ingresados por el estudiante en su solicitud consultando por id de la solicitud",
+                "operationId": "SolicitudEvaluacionController.GetDatosSolicitudById",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id_solicitud",
+                        "description": "Id de la solicitud",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{}"
+                    },
+                    "403": {
+                        "description": "body is empty"
+                    }
+                }
+            }
+        },
+        "/actualizaciones-datos/solicitudes/{id_solicitud}/estado": {
+            "get": {
+                "tags": [
+                    "actualizaciones-datos"
                 ],
                 "description": "actualiza de forma publica el estado de una solicitud tipo evaluacion",
                 "operationId": "SolicitudEvaluacionController.PutSolicitudEvaluacion",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id_solicitud",
+                        "description": "ID DE LA SOLICITUD",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "{}"
@@ -213,7 +223,7 @@
     },
     "tags": [
         {
-            "name": "solicitud_evaluacion",
+            "name": "actualizaciones-datos",
             "description": "SolicitudEvaluacionController ...\n"
         }
     ]
